--- a/COMP231Project/res/layout/activity_receptionist_patient_search.xml
+++ b/COMP231Project/res/layout/activity_receptionist_patient_search.xml
@@ -6,94 +6,94 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".PatientAccount" >
+    tools:context=".ReceptionistPatientSearch" >
 
     <TextView
-        android:id="@+id/txtSearchPatientWelcomeMessage"
+        android:id="@+id/txtPatientSearchWelcomeMessage"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:layout_alignParentTop="true"
         style="@style/WelcomeLineOnEachPage"
-        android:text="Enter the following information to register a patient" />
+        android:text="Search patient information by providing following information." />
 
 
    
     <!-- Table -->
  	<TableLayout 
-    android:id="@+id/tblLogin"
+    android:id="@+id/tblSearchPatient"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="20dp"
-    android:layout_below="@+id/txtSearchPatientWelcomeMessage" >
+    android:layout_below="@+id/txtPatientSearchWelcomeMessage" >
  
     <!-- First USer Row -->
     
       
     <TableRow
-        android:id="@+id/tblUserName"
+        android:id="@+id/trPatientId"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
  
     		<TextView
-            android:id="@+id/lblUserName"
-            android:text="User Name" />
+            android:id="@+id/lblPatientId"
+            android:text="Patient Id" />
     		
     		<EditText
-	        android:id="@+id/etUserName"
+	        android:id="@+id/etPatientId"
 	        android:layout_width="200dp"
 	        android:layout_height="wrap_content"
-	        android:inputType="text" />
+	        android:inputType="number" />
        		
     </TableRow>
     
     		 <!-- Second Row Password -->
     <TableRow
-        android:id="@+id/tblPassword"
+        android:id="@+id/trFirstName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
  
     		<TextView
-            android:id="@+id/lblPassword"
-            android:text="Password" />
+            android:id="@+id/lblFirstName"
+            android:text="First Name" />
     		
     		<EditText
-	        android:id="@+id/etPassword"
+	        android:id="@+id/etFirstName"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
-	        android:inputType="textPassword" />
+	        android:inputType="text" />
        		
     </TableRow>
     
     <!-- Third Row Password -->
     <TableRow
-        android:id="@+id/tblConfirmPassword"
+        android:id="@+id/trLastName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
  
     		<TextView
-            android:id="@+id/lblConfirmPassword"
-            android:text="Confirm Password" />
+            android:id="@+id/lblLastName"
+            android:text="Last Name" />
     		
     		<EditText
-	        android:id="@+id/etConfirmPassword"
+	        android:id="@+id/etLastName"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
-	        android:inputType="textPassword" />
+	        android:inputType="text" />
        		
     </TableRow>
  </TableLayout>
     
   
     <Button
-        android:id="@+id/btnCreateAccount"
+        android:id="@+id/btnSearchPatient"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
-        android:layout_below="@+id/tblLogin"
+        android:layout_below="@+id/tblSearchPatient"
         android:layout_centerHorizontal="true"
-        android:text="Register Patient" />
+        android:text="Search Patient" />
 
 </RelativeLayout>
