--- a/COMP231Project/res/layout/activity_add_receptionist.xml
+++ b/COMP231Project/res/layout/activity_add_receptionist.xml
@@ -6,16 +6,11 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".Receptionist" >
+    tools:context=".AddReceptionist" >
 
-    <Button
-        android:id="@+id/btnRegisterPatient"
-        android:layout_width="fill_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="17dp"
-        android:layout_marginTop="70dp"
-        android:text="Register Patient" />
+        android:text="@string/hello_world" />
 
 </RelativeLayout>
