--- a/COMP231Project/res/values/styles.xml
+++ b/COMP231Project/res/values/styles.xml
@@ -19,8 +19,15 @@
     
     
     <style name="WelcomeLineOnEachPage"> 
-		<item name="android:textColor">#0F0F0F</item> 
+		<item name="android:textColor">#76275f</item> 
 		<item name="android:textSize">8pt</item> 
+		<item name="android:textStyle">bold</item> 
+		<item name="android:typeface">monospace</item>
+	</style>
+	
+        <style name="LabelForProfileAttribute"> 
+		<item name="android:textColor">#c0362c</item> 
+		<item name="android:textSize">4pt</item> 
 		<item name="android:textStyle">bold</item> 
 		<item name="android:typeface">monospace</item>
 	</style>
