--- a/COMP231Project/res/menu/main.xml
+++ b/COMP231Project/res/menu/main.xml
@@ -1,9 +1,8 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android" >
 
     <item
-        android:id="@+id/action_settings"
-        android:orderInCategory="100"
-        android:showAsAction="never"
-        android:title="@string/action_settings"/>
+        android:id="@+id/adminRegistration"
+        android:orderInCategory="1"
+        android:title="Admin Registration"/>
 
 </menu>
