--- a/COMP231Project/res/layout/activity_add_doctor.xml
+++ b/COMP231Project/res/layout/activity_add_doctor.xml
@@ -288,7 +288,20 @@
         		android:ems="10">
     		</EditText>
          </TableRow>
-         
+    <TableRow
+        android:id="@+id/trDept"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content">
+ 
+    		<TextView
+            android:id="@+id/lblDepartment"
+            android:text="Department" />
+       		
+       		<Spinner
+	        android:id="@+id/spinnerDeptartment"
+	        android:layout_width="40dp"
+	        android:layout_height="wrap_content" />
+    </TableRow>
          <TableRow
             android:id="@+id/trSpeciality"
             android:layout_width="wrap_content"
