--- a/COMP231Project/res/layout/activity_receptionist_account.xml
+++ b/COMP231Project/res/layout/activity_receptionist_account.xml
@@ -6,8 +6,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainAcitivity" >
-<!-- 
+    tools:context=".ReceptionistAccount" >
+
     <TextView
         android:id="@+id/txtWelcomeMessage"
         android:layout_width="fill_parent"
@@ -16,26 +16,9 @@
         android:layout_marginTop="10dp"
         android:layout_alignParentTop="true"
         style="@style/WelcomeLineOnEachPage"
-        android:text="@string/txtWelcomeMessage" />
+        android:text="Enter the following information to create an account for Receptionist" />
 
-    <TextView
-        android:id="@+id/txtTagLine"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@+id/txtWelcomeMessage"
-        android:layout_marginTop="10dp"
-        style="@style/WelcomeLineOnEachPage"
-        android:text="@string/txtTagLine"  />
-        
-  -->
-      <ImageView
-        android:id="@+id/imageEzHealth"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentTop="true"
-        android:src="@drawable/main_page_image" />
+
    
     <!-- Table -->
  	<TableLayout 
@@ -44,75 +27,73 @@
     android:layout_height="wrap_content"
     android:layout_centerHorizontal="true"
     android:layout_marginTop="20dp"
-    android:layout_below="@+id/imageEzHealth" >
+    android:layout_below="@+id/txtWelcomeMessage" >
  
     <!-- First USer Row -->
-    <TableRow
-        android:id="@+id/tblLoginRowUser"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
- 
-    		<TextView
-            android:id="@+id/lblUser"
-            android:text="@string/lblUser" />
-       		
-       		<Spinner
-	        android:id="@+id/spinnerUser"
-	        android:layout_width="40dp"
-	        android:layout_height="wrap_content"
-	        android:entries="@array/spinnerUserArray" />
-    </TableRow>
     
-        <!-- Second Row Username -->
+      
     <TableRow
-        android:id="@+id/tblLoginRowUserName"
+        android:id="@+id/tblUserName"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
  
     		<TextView
             android:id="@+id/lblUserName"
-            android:text="@string/lblUserName" />
+            android:text="User Name" />
     		
     		<EditText
-	        android:id="@+id/eTxtUserName"
+	        android:id="@+id/etUserName"
 	        android:layout_width="200dp"
 	        android:layout_height="wrap_content"
 	        android:inputType="text" />
        		
     </TableRow>
     
-    		 <!-- Third Row Password -->
+    		 <!-- Second Row Password -->
     <TableRow
-        android:id="@+id/tblLoginRowPassword"
+        android:id="@+id/tblPassword"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content" >
  
     		<TextView
             android:id="@+id/lblPassword"
-            android:text="@string/lblPassword" />
+            android:text="Password" />
     		
     		<EditText
-	        android:id="@+id/eTxtPassword"
+	        android:id="@+id/etPassword"
 	        android:layout_width="fill_parent"
 	        android:layout_height="wrap_content"
 	        android:inputType="textPassword" />
        		
     </TableRow>
     
+    <!-- Third Row Password -->
+    <TableRow
+        android:id="@+id/tblConfirmPassword"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content" >
+ 
+    		<TextView
+            android:id="@+id/lblConfirmPassword"
+            android:text="Confirm Password" />
+    		
+    		<EditText
+	        android:id="@+id/etConfirmPassword"
+	        android:layout_width="fill_parent"
+	        android:layout_height="wrap_content"
+	        android:inputType="textPassword" />
+       		
+    </TableRow>
  </TableLayout>
     
   
     <Button
-        android:id="@+id/btnLogin"
+        android:id="@+id/btnCreateAccount"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:layout_below="@+id/tblLogin"
         android:layout_centerHorizontal="true"
-        android:background="#000043"
-        android:textColor="#ffffff"
-        android:textStyle="bold"
-        android:text="@string/btnLogin" />
-
-
+        android:text="Create Account" />
 
 </RelativeLayout>
