--- a/COMP231Project/res/layout/activity_receptionist_doctor_profile_view.xml
+++ b/COMP231Project/res/layout/activity_receptionist_doctor_profile_view.xml
@@ -1,16 +1,62 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/LinearLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ReceptionistDoctorProfileView" >
-
+    tools:context=".ReceptionistPatientProfileView" >
+    
     <TextView
+        android:id = "@+id/lblDocName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        style = "@style/LabelForProfileAttribute"
+        android:layout_marginTop="10dp"
+        android:text="Name" />
+    <TextView
+        android:id = "@+id/displayDocName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:textSize="14sp" />
+    
+        <TextView
+        android:id = "@+id/lblDocContact"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        style = "@style/LabelForProfileAttribute"
+        android:text="Contact Information" />
+    <TextView
+        android:id = "@+id/displayDocContact"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:textSize="14sp" />
+    <TextView
+        android:id = "@+id/displayDocAddress"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:textSize="14sp" />
 
-</RelativeLayout>
+    <TextView
+        android:id="@+id/lblDocSpecification"
+        style="@style/LabelForProfileAttribute"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Specification" />
+
+    <TextView
+        android:id = "@+id/displayDocInsuranceInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:textSize="14sp" />
+   
+</LinearLayout>
