--- a/COMP231Project/res/layout/activity_receptionist_schedule_appointment.xml
+++ b/COMP231Project/res/layout/activity_receptionist_schedule_appointment.xml
@@ -1,16 +1,113 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".ReceptionistScheduleAppointment" >
+    tools:context=".AdminAddDoctorSchedule" >
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/LinearLayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:orientation="vertical" >
 
-</RelativeLayout>
+        <TextView
+            android:id="@+id/tv"
+            style="@style/WelcomeLineOnEachPage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+        
+        <TextView
+            android:id="@+id/lblPatient"
+            style="@style/LabelForProfileAttribute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Patient ID" />
+        
+        <EditText
+            android:id="@+id/etPatientId"
+            style="@style/LabelForProfileAttribute"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:hint="Enter Patient ID" />
+        
+         <Button
+            android:id="@+id/btnGetPatient"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text = "Get Patient" />
+         
+         <TextView
+            android:id="@+id/tvPatientName"
+            style="@style/WelcomeLineOnEachPage" 
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/lblDepartment"
+            style="@style/LabelForProfileAttribute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Department" />
+        
+
+        <Spinner
+            android:id="@+id/spinnerDeptartmentAppointment"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" 
+            android:drawSelectorOnTop="true"/>
+
+        <TextView
+            android:id="@+id/lblDoctorName"
+            style="@style/LabelForProfileAttribute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Doctor Name" />
+
+        <Spinner
+            android:id="@+id/spinnerDoctorName"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/lblAppointmentDate"
+            style="@style/LabelForProfileAttribute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Appointment Date" />
+
+        <Button
+            android:id="@+id/btnSelectDate"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text = "Select Date" />
+
+        <TextView
+            android:id="@+id/lblSelectTime"
+            style="@style/LabelForProfileAttribute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Select Time" />
+
+        <RadioGroup
+            android:id="@+id/rgAppointmentTime"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+        </RadioGroup>
+
+        <Button
+            android:id="@+id/btnMakeAppointment"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Make an Appointment" />
+
+        <Button
+            android:id="@+id/btnDone"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Done" />
+    </LinearLayout>
+
+</ScrollView>
