Story: Receptionist schedules patient an appointment
This code includes the two more activities like
ReceptionistSchedulePatientAppointment and CalView to make an
appointment. Receptionist from her/his homepage can go to schedule
appointment page for patient.

--- a/COMP231Project/res/layout/activity_receptionist_schedule_appointment.xml
+++ b/COMP231Project/res/layout/activity_receptionist_schedule_appointment.xml
@@ -68,6 +68,20 @@
             android:id="@+id/spinnerDoctorName"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content" />
+        
+         <TextView
+            android:id="@+id/lblDoctorScheduleDay"
+            style="@style/LabelForProfileAttribute"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:text="Week Days Doctor Available" />
+         
+         <RadioGroup
+            android:id="@+id/rgDoctorDays"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+        </RadioGroup>
 
         <TextView
             android:id="@+id/lblAppointmentDate"
